[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exflux"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Mikko Marttila", email = "13412395+mikmart@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "certifi",
  "influxdb3-python",
  "omegaconf",
  "pandas"
]

[project.urls]
Documentation = "https://github.com/mikmart/exflux/exflux#readme"
Issues = "https://github.com/mikmart/exflux/exflux/issues"
Source = "https://github.com/mikmart/exflux/exflux"

[tool.hatch.version]
path = "src/exflux/__about__.py"

[project.scripts]
exflux = "exflux.cli:main"
