[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exflux"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Mikko Marttila", email = "13412395+mikmart@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "certifi",
  "influxdb3-python",
  "omegaconf",
  "pandas",
]

[project.urls]
Documentation = "https://github.com/mikmart/exflux/exflux#readme"
Issues = "https://github.com/mikmart/exflux/exflux/issues"
Source = "https://github.com/mikmart/exflux/exflux"

[tool.hatch.version]
path = "src/exflux/__about__.py"

[project.scripts]
exflux = "exflux.cli:main"
